k8s/manifests/apps/api.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: lerpz
spec:
  selector:
    app: api
  ports:
    - name: http
      port: 4000
      targetPort: 4000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: lerpz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: lerpz/api:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4000
          readinessProbe:
            tcpSocket:
              port: 4000
            initialDelaySeconds: 5
            periodSeconds: 10
