k8s/manifests/apps/artoo.yaml
apiVersion: v1
kind: Service
metadata:
  name: artoo
  namespace: lerpz
spec:
  selector:
    app: artoo
  ports:
    - name: http
      port: 4001
      targetPort: 4001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: artoo
  namespace: lerpz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: artoo
  template:
    metadata:
      labels:
        app: artoo
    spec:
      containers:
        - name: artoo
          image: lerpz/artoo:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 4001
          readinessProbe:
            tcpSocket:
              port: 4001
            initialDelaySeconds: 5
            periodSeconds: 10
